# BrickGame-IA

./: Cargo.toml  README.md
src/: config.rs  game.rs  main.rs  player.rs  ship.rs  spawner.rs
