[package]
name = "bgia"
version = "0.1.0"
authors = ["Leonardo Vencovsky <leonardo.vencovsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
piston = "0.49.0"
piston_window = "0.98.0"
pistoncore-input = "0.28.0"
rand = "0.7.3"
